# analisis-calidad-estimacion-1pl-bayesiana

./: .gitignore  GITHUB_PAGES_SETUP.md  README.md  TODO.md  pyproject.toml  requirements.txt  serve_local.sh  update_pipeline_viz.sh
.github/workflows/: build-and-deploy.yml  kedro-pipeline.yml  pages.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_generate_responses.yml
docs/: README.md  _config.yml  index.html
docs/pipeline_visualization/: index.html
docs/pipeline_visualization/api/: deploy-viz-metadata  main
docs/pipeline_visualization/api/nodes/: 00595003  014381ba  03cacc31  053f6789  05d92a25  06287146  0725640a  0756a77d  076be593  0782d7fc  07928a94  07963445  0834484d  084d7228  09041cf4  0a44123d  0a818e3f  0b82002b  0c7f636c  0dc38346  0e138284  0fda1010  1022eb82  1090686d  1149fb66  11c36986  120af7ca  1224c870  1353ceaf  135c4218  13a635d4  13be428f  1512d5e2  159a0aab  15f05f2d  164af5ee  16855079  176e4813  177dffe1  17b07eef  (+256 more)
docs/pipeline_visualization/api/pipelines/: __default__  auto_pred_s1  bayes_estimation_s1  generate_responses  mmle_estimation_s1  reporting_s1  sample_s1  subsample_s1
docs/pipeline_visualization/static/css/: main.62873e9a.css
docs/source/: conf.py  index.rst
notebooks/: irt_1pl_simulation_analysis.ipynb  irt_1pl_simulation_analysis_MMLE.ipynb  nba_foul_analysis_irt.ipynb
pipeline_visualization.html/api/nodes/: 1512d5e2  1a0a0ec9  73e790d7  f5617d53
src/analisis_calidad_estimacion_1pl_bayesiana/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/analisis_calidad_estimacion_1pl_bayesiana/pipelines/: __init__.py
src/analisis_calidad_estimacion_1pl_bayesiana/pipelines/auto_pred_s1/: nodes.py  pipeline.py
src/analisis_calidad_estimacion_1pl_bayesiana/pipelines/bayes_estimation_s1/: nodes.py  pipeline.py
tests/pipelines/generate_responses/: test_pipeline.py
(+11 files in other folders)
